--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "Server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js"
+    "start": "node server.js"
   },
-  "author": "Fathima Asna",
-  "license": "ISC",
-  "keywords": [],
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.2",
-    "nodemon": "^3.0.2"
-  }
+  "author": "",
+  "license": "ISC"
 }
