--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
