--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,24 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
-  "author": "Fathima Asna",
+  "author": "Mohamed Aslam",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.4.0",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.11.0"
   }
 }
