--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
-  "author": "Mohamed Aslam",
+  "author": "Fathima Asna",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
