--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,16 +2,28 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
-    "@svgr/cli": "^8.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "mern-ecommorce": "file:..",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
+    "react-dotenv": "^0.1.3",
+    "react-helmet-async": "^2.0.4",
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.10.4",
+    "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,10 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
   }
 }
